# dlx

./: .clang-format  .gitignore  .project  CMakeLists.txt  LICENSE.txt  Makefile  README.md
examples/: count-solutions.py  example-2x2-matrix.c  generate-n-queens-matrix.py  generate-nxn-latin-square-matrix.py  generate-nxn-sudoku-matrix.py
libdlx/: CMakeLists.txt  Doxyfile.in
libdlx/include/: dlx_iterative_solver.h  dlx_recursive_solver.h  libdlx.h  matrix.h
libdlx/src/: dlx_dance.c  dlx_dance.h  dlx_iterative_solver.c  dlx_recursive_solver.c  matrix.c  matrix_query.c  matrix_query.h  matrix_struct.h
libdlx/test/: run.py
libdlx/test/cases/: 1x1-1  2x2-1  2x2-2  2x2-3  2x2-4  3x3-1  3x3-2  empty  latin-square-all-1x1  latin-square-all-2x2  latin-square-all-3x3  latin-square-all-4x4  queens-10  queens-11  queens-12  queens-2  queens-3  queens-4  queens-5  queens-6  queens-7  queens-8  queens-9  sudoku-all-4x4
pydlx/: __init__.py  dlx_iterative_solver.py  dlx_matrix.py  dlx_recursive_solver.py
sudoku/: pretty-print-puzzle.py  sudoku-to-exactcover.txt  sudoku17.txt.xz
sudoku/sudgen/: CMakeLists.txt
sudoku/sudgen/src/: fisher_yates.c  fisher_yates.h  main.c
sudoku/sudslv/: CMakeLists.txt
sudoku/sudslv/src/: main.c
